//
// Copyright 2022 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package oak.micro_rpc;

import "google/protobuf/descriptor.proto";

// Custom option extension related to micro_rpc
extend google.protobuf.MethodOptions {
  // Service methods that will be used with micro_rpc should provide a
  // unique-per-service method_id number using this custom option.
  optional int32 method_id = 425000010;
}
